--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
     "scheme": "nusuri",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/icons2.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
