--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "15.12.1",
+    "react-native-svg": "^15.15.1",
     "react-native-url-polyfill": "^3.0.0"
   },
   "devDependencies": {
